--- a/SpendSense-BackEnd/pom.xml
+++ b/SpendSense-BackEnd/pom.xml
@@ -164,6 +164,11 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-crypto</artifactId>
+				<version>6.4.4</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
